--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,11 @@
 		"target": "ES2022",
 		"outDir": "out",
 		"lib": [
-			"ES2022"
-		],
+			"ES2022",
+			"DOM"
+		], // Add "DOM" for setTimeout or "Node" for Node.js-specific features
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
+		"strict": true
 	}
 }
